# ccc-2026

./: .gitignore  README.md  pyproject.toml
csv/: all_narrative_top_100_lemmata.csv  all_speeches_top_100_lemmata.csv  epic_tragedy_log_ratio.csv  epic_tragic.csv  homer_speech_and_narrative_by_line-APOLOGOI_ONLY.csv  homer_speech_and_narrative_by_line.csv  homer_speech_and_narrative_by_line_no-apologoi.csv  homer_speech_and_narrative_by_sentence-APOLOGOI_NESTOR_ONLY.csv  homer_speech_and_narrative_by_sentence-APOLOGOI_ONLY.csv  homer_speech_and_narrative_by_sentence.csv  homer_speech_and_narrative_by_sentence_no-apologoi.csv  homer_speech_and_narrative_by_sentence_no-nestor_no-apologoi.csv  iliad_narrative_top_100_lemmata.csv  iliad_speeches_top_100_lemmata.csv  iliad_vs_odyssey.csv  odyssey_narrative_top_100_lemmata.csv  odyssey_speeches_top_100_lemmata.csv  speech_vs_narrative-log-ratio.csv  speech_vs_narrative.csv  speech_vs_narrative_bigrams.csv  tragedy_urn_heat.csv
markdown/: 2026-06-24_epea-tragica.md  references.bib
notebooks/: epic_speech_vs_narrative.ipynb  epic_vs_tragedy.ipynb  epic_vs_tragedy2.ipynb  tragedy_epicness_by_character.ipynb  tragedy_epicness_over_time.ipynb
parquet/: bigrams_by_epic.parquet  bigrams_by_epic_and_register.parquet  epic_tragic_lemmata_loglikelihood.parquet  epicness_by_speaker.parquet  epicness_log_ratio.parquet  homer_dtm.parquet  homer_epic.parquet  homer_speech_narrative.parquet  homeric_narrative.parquet  homeric_narrative_dtm.parquet  homeric_speeches.parquet  homeric_speeches_dtm.parquet  old_homer.parquet  (+3 more)
(+18 files in other folders)
