[project]
name = "2026-06-13-ccc-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.1",
    "conllu>=6.0.0",
    "fastparquet>=2026.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "stanza>=1.12.2",
    "statsmodels>=0.14.6",
]

[tool.uv.workspace]
members = [
    "web",
]
